[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yindong", email = "xydarcher@uestc.edu.cn"},
]
dependencies = [
    "sphinx==4.1.2",
    "sphinx-rtd-theme==0.5.2",
    "sphinxcontrib-wavedrom==3.0.1",
    "sphinx-multiversion==0.2.4",
    "cairocffi>=1.3.0",
    "cairosvg>=2.5.2"]
requires-python = ">=3.8"
license = {text = "Private"}

[project.urls]
Homepage = ""
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = true

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
